in the final DDD 3.1 release.  See the DDD WWW Page
`http://www.cs.tu-bs.de/softech/ddd/' for further information.


DDD 3.0.92 [in development]
===========================

This is the third beta release of DDD 3.1, fixing some minor bugs:

- Perl source position was not recognized in a number of cases.
- Plot could freeze DDD under certain circumstances.

See the DDD ChangeLog for more details.


DDD 3.0.91
==========

This is the second beta release of DDD 3.1, fixing a number of bugs:

- Plot window cannot be opened on a number of window managers
- DDD dumps core if Gnuplot was not found
- `Show/Hide Detail' does not work in nested displays
- `Select All' in Plot Window causes core dump
- Text character breakpoints in empty lines are not shown
- DBX `examine' command lacks a space after `x'
- After closing the exec window, redirection args remain
- SGI CC does not allow `&=' on bool type
- SGI C++ ostream::pcount() implementation is not supported
- `ddd/assert.h' has a GCC-only `#include_next' directive


There are also some minor new features:

- Tool bar location can be configured within DDD
- Multiple DDDs can run at the same time without obnoxious warnings
- User-defined commands can accept arguments

See the DDD ChangeLog for more details.


DDD 3.0.90
==========

This is the first beta release of DDD 3.1, bringing Perl support,
Python support, data plotting, Undo/Redo, and advanced data exploration.


Debuggers, Languages, and Platforms
-----------------------------------

- Perl support.  DDD supports debugging Perl programs, using the Perl
  debugger.  Requires Perl 5.003 or later.

- Python support.  DDD supports debugging Python programs, using the
  PYDB command-line debugger.  See the `pydb' sub-directory for PYDB
  source and details.  Python support was contributed by Richard Wolff
  <rwolff@noao.edu>.

- The new debugger type `auto' will automatically select the most
  appropriate debugger for the given arguments (i.e. Perl for perl