@@ -141,4 +141,8 @@ Volunteers for fixing these and other bugs are welcome!
 353 (Automake) The `configure' script checks for `__CYGWIN32__', but
     as of Beta 20, this should be `__CYGWIN__'.
 
-359 (Insert new bugs here)
+359 Iconfifying a plot window makes it immune to deletion.
+
+360 Plot tear-offs remain active when the main window has been closed.
+
+361 (Insert new bugs here)
