@@ -16,6 +16,7 @@ This is the third beta release of DDD 3.1, fixing some minor bugs:
 
 - Perl source position was not recognized in a number of cases.
 - Plot could freeze DDD under certain circumstances.
+- The builtin plot is much faster.
 
 See the DDD ChangeLog for more details.
 
